--- a/styles.css
+++ b/styles.css
@@ -27,24 +27,24 @@ body {
 }
 
 .game-over {
-  background-color: red;
+  background-color: orange;
   opacity: 0.8;
 }
 
-.red {
-  background-color: red;
+.orange {
+  background-color: orange;
 }
 
-.green {
-  background-color: green;
+.pink {
+  background-color: pink;
 }
 
-.blue {
-  background-color: blue;
+.brown {
+  background-color: brown;
 }
 
-.yellow {
-  background-color: yellow;
+.pink{
+  background-color: pink;
 }
 
 .pressed {
