--- a/styles.css
+++ b/styles.css
@@ -36,11 +36,11 @@ body {
 }
 
 .green {
-  background-color: greeen;
+  background-color: green;
 }
 
 .blue {
-  background-color: bule;
+  background-color: blue;
 }
 
 .yellow {
